--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false,
-    "outFile": "bundle.js"
+    "noImplicitAny": false
   }
 }
