--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "files.exclude": {
         "**/.git": true,
         "**/.DS_Store": true,
-        "**/*.js": true,
+        //"**/*.js": true,
         "**/*.map": true
     },
     "files.autoSave": "afterDelay"
